# tiny-renderer

./: .clang-format  CMakeLists.txt  README.md  geometry.hpp  main.cpp  model.cpp  model.hpp  obj_loader_helper.hpp  rasterization.hpp  tga_color.hpp  tga_header.hpp  tgaimage.cpp  tgaimage.hpp  wireframe.tga
lessons/: CMakeLists.txt  depth_buffer.hpp  model_rendering.hpp  perspective_projection.cpp  perspective_projection.hpp  triangle_rendering.hpp
